Deployment/Istio-policies/enable-mtls.yml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: "example-policy"
  namespace: "default"
spec:
  mtls:
    mode: STRICT
