Deployment/Istio-policies/circuit-breaking.yml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: wep-spa-circuit-breaker
spec:
  host: configuration-api-service.default.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutive5xxErrors: 1
      interval: 1s
      baseEjectionTime: 3m
      maxEjectionPercent: 100
