Deployment/Istio-policies/destination-rule-webspa.yml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: web-spa
spec:
  host: web-spa
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
