Deployment/Istio-policies/load-balancing.yml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: configuration-api-load-balancer
spec:
  host: configuration-api-service.default.svc.cluster.local
  trafficPolicy: # Apply to all ports
    portLevelSettings:
    - port:
        number: 80
      loadBalancer:
        simple: LEAST_CONN
