Deployment/Istio-policies/routing-rule-webspa.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-spa-virtualservice
spec:
  hosts:
  - web-spa
  http:
  - route:
    - destination:
        host: web-spa
        subset: v1
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: web-spa-destinationrule
spec:
  host: web-spa
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
