Deployment/Istio-policies/vertual-service-webspa.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: web-spa
spec:
  hosts:
  - web-spa
  http:
  - route:
    - destination:
        host: web-spa
        subset: v1
