Deployment/Istio-policies/restrict-policy.yml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: "authentication-api-auth"
  namespace: default
spec:
  selector:
    matchLabels:
      app: authentication-api # Match the specific workload label
  action: DENY
  rules:
  - from:
    - source:
        notRequestPrincipals: ["*"]
    to:
      - operation:
          methods: ["GET"]
          paths: ["/api/Auth/validatetoken"] # Match the service account
